Sat Jul 29 04:39:02 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* configure.in: Don't link with -lkadm.

Fri Jul 7 15:47:04 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES and USE_KADM_LIBRARY.


Thu Jun 15 17:39:17 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:58:40 1995  Tom Yu  (tlyu@dragons-lair)

	* sserver.c: krb5_auth_context redefinitions

Fri Jun  9 18:28:33 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Sat Jun  3 17:20:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sserver.c (main): If using inetd, set file descriptor to 0.

Wed May 10 15:18:19 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* sserver.M: Document options.

	* sserver.c: (main): Add options -p port, -S keytab for use by
		dejagnu. Cleaned up warnings in compile.

Wed May 03 03:30:51 1995  Chris Provenzano (proven@mit.edu)

        * sserver.c: (krb5_recvauth()): No longer needs the rc_type arg.

Tue Apr 25 21:41:46 1995 Chris Provenzano (proven@mit.edu)

	* sserver.c: Initialize auth_context to NULL before using.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * sserver.c: Use new calling convention for krb5_recvauth().

Thu Mar  2 12:27:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:57:12 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:59:17 1995  John Gilmore  (gnu at toad.com)

	* sserver.c:  Avoid <krb5/...> and <com_err.h> includes.

Mon Oct  3 19:16:14 1994  Theodore Y. Ts'o  (tytso@dcl)
